--- a/Debug/makefile
+++ b/Debug/makefile
@@ -8,11 +8,14 @@ RM := rm -rf
 
 # All of the sources participating in the build are defined here
 -include sources.mk
+-include src/window/subdir.mk
+-include src/view/subdir.mk
 -include src/unused/subdir.mk
 -include src/process/subdir.mk
 -include src/playback/subdir.mk
 -include src/math/subdir.mk
 -include src/fft/subdir.mk
+-include src/display/subdir.mk
 -include src/buffer/subdir.mk
 -include src/subdir.mk
 -include subdir.mk
