--- a/Debug/makefile
+++ b/Debug/makefile
@@ -53,7 +53,7 @@ all: asound2
 asound2: $(OBJS) $(USER_OBJS)
 	@echo 'Building target: $@'
 	@echo 'Invoking: Cross G++ Linker'
-	g++ -L/usr/pkg/lib/ -o "asound2" $(OBJS) $(USER_OBJS) $(LIBS)
+	g++  -o "asound2" $(OBJS) $(USER_OBJS) $(LIBS)
 	@echo 'Finished building target: $@'
 	@echo ' '
 
