remove old rendering code

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,24 @@ cmake_minimum_required (VERSION 2.6)
 project (Audio)
 
 # TODO: generate errors when not found
-find_package(OpenGL REQUIRED)
-find_package(GLUT REQUIRED)
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/CMake/")
 find_package(ALSA REQUIRED)
 find_package(Threads REQUIRED)
 
-include_directories(${ALSA_INCLUDE_DIR} ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS})
+# rendering
+find_package(Epoxy REQUIRED)
+
+find_package(PkgConfig REQUIRED)
+pkg_search_module(GLFW REQUIRED glfw3)
+
+find_package(Freetype REQUIRED)
+
+# includes for dependencies
+include_directories(
+	${ALSA_INCLUDE_DIR}
+	${EPOXY_INCLUDE_DIRS}
+	${FREETYPE_INCLUDE_DIRS}
+)
 
 # build main library
 set(LIBRARY_NAME "audio")
@@ -18,3 +30,9 @@ include_directories("${PROJECT_SOURCE_DIR}/src")
 
 #build executable
 add_subdirectory(bin)
+
+# write src path to binary dir
+configure_file (
+  "${CMAKE_MODULE_PATH}/src_path.in"
+  "${PROJECT_BINARY_DIR}/src_path"
+)
